// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filteredCostReducer should matches the add cost state 1`] = `
Object {
  "costs": Array [
    Object {
      "category": "CLOTHING",
      "comment": "this is a comment",
      "cost": 1000,
    },
  ],
}
`;

exports[`filteredCostReducer should matches the add filtered costs state 1`] = `
Object {
  "costs": Array [
    Object {
      "category": "CLOTHING",
      "comment": "this is a comment",
      "cost": 1000,
    },
    Object {
      "category": "RENT",
      "comment": "this is a comment",
      "cost": 1500,
    },
    Object {
      "category": "FOOD",
      "comment": "this is a comment",
      "cost": 2000,
    },
  ],
}
`;

exports[`filteredCostReducer should matches the initial state 1`] = `
Object {
  "costs": Array [],
}
`;
